refine manifest file docs